--- a/example/FileStoreSample/app/src/main/res/layout/activity_main.xml
+++ b/example/FileStoreSample/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_toEndOf="@+id/button2"/>
 
     <Button
-        android:onClick="onGETDataClicked"
+        android:onClick="onGETClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/GET"
@@ -107,7 +107,7 @@
         android:layout_alignStart="@+id/button3"/>
 
     <Button
-        android:onClick="onAsyncGETDataClicked"
+        android:onClick="onAsyncGETClicked"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/GET"
